--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -10,8 +10,8 @@
     ></p-button>
   </div>
 
-  <div class="flex justify-between items-center mb-4">
-    <div class="relative mb-4 w-1/3">
+  <div class="flex justify-between flex-wrap sm:px-2 px-4 items-center mb-4">
+    <div class="relative mb-4 w-full sm:w-1/3">
       <i
         class="pi pi-search absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400"
       ></i>
@@ -23,7 +23,7 @@
       />
     </div>
 
-    <div *ngIf="products.length > 1" class="mb-4 w-[250px]">
+    <div *ngIf="products.length > 1" class="mb-4 w-full sm:w-[250px]">
       <p-slider
         [(ngModel)]="priceRange"
         [min]="minPrice"
